# hook-my-lichess

./: .env.example  CLAUDE.md  README.md  pyproject.toml  settings.example.json  settings.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/hooks/: on-prompt.sh  on-start.sh  on-stop.sh
.github/workflows/: release.yml
docs/: v5-wrapper-vs-v6-sidecar.md
hooks/: _resolve.sh  hooks.json  on-prompt.sh  on-start.sh  on-stop.sh
lichess_puzzle/: __init__.py  api.py  board.py  cli.py  engine.py  overlay.py  render.py  settings.py  sidecar.py  wrapper.py
scripts/: smoke_sidecar.py  smoke_wrapper.py
