[project]
name = "hook-my-lichess"
version = "0.1.0"
description = "A Claude Code hook that opens a Lichess puzzle in your terminal while Claude is working."
requires-python = ">=3.10"
dependencies = [
    "chess>=1.10",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "pydantic>=2.0",
]

[project.scripts]
hml-overlay = "lichess_puzzle.sidecar:main"
lichess-puzzle = "lichess_puzzle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lichess_puzzle"]
